<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="42dp">

    <Button
        android:id="@+id/buttonEcotracker"
        android:layout_width="404dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:text="ecotracker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonACF" />

    <Button
        android:id="@+id/buttonACF"
        android:layout_width="404dp"
        android:layout_height="51dp"
        android:layout_marginTop="248dp"
        android:text="@string/buttonACF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEcoGauge"
        android:layout_width="404dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:text="@string/buttonEcoGauge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="404dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:text="@string/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEcotracker" />

</androidx.constraintlayout.widget.ConstraintLayout>